--- a/Games/Web.config
+++ b/Games/Web.config
@@ -8,22 +8,11 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  
-   
 
-<!--connectionStrings For Local Database-->
-<!--<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Games-20210105051927.mdf;initial catalog=aspnet-Games-20210105051927;integrated security=True" providerName="System.Data.SqlClient" />
+<connectionStrings>
+    <add name="DefaultConnection" connectionString="YOUR OWN CONNECTION STRING HERE" providerName="System.Data.SqlClient" />
   
-     <add name="Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=(LocalDb)\MSSQLLocalDB;attachdbfilename=|DataDirectory|\aspnet-Games-20210105051927.mdf;initial catalog=aspnet-Games-20210105051927;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>-->
-  
-  
- <!--connectionStrings For Server Database
--->
-    <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=SQL5101.site4now.net;Initial Catalog=DB_A6C679_games;User Id=DB_A6C679_games_admin;Password=mizru1312" providerName="System.Data.SqlClient" />
-    <add name="Entities" connectionString="metadata=res://*/Models.Model1.csdl|res://*/Models.Model1.ssdl|res://*/Models.Model1.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=SQL5101.site4now.net;Initial Catalog=DB_A6C679_games;User Id=DB_A6C679_games_admin;Password=mizru1312;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+     <add name="Entities" connectionString="YOUR OWN CONNECTION STRING HERE" providerName="System.Data.EntityClient" />
   </connectionStrings>
     
   <appSettings>
